--- a/app/scss/_home.scss
+++ b/app/scss/_home.scss
@@ -1,3 +1,17 @@
+.main-home{
+    position: relative;
+    z-index: 9;
+}
+.main-home::before{
+    position: absolute;
+    content: '';
+    width: 15rem;
+    height: 110rem;
+    background: url('../images/home/logo-left.png') no-repeat;
+    left: 0%;
+    top: 45%;
+    z-index: 9;
+}
 .header{
     background: url('../images/home/header-home-bg.jpg') no-repeat;
     background-size: cover;
@@ -7,12 +21,25 @@
     align-items: center;
     justify-content: space-between;
     height: 9.5rem;
+    position: relative;
+    z-index: 2;
 }
 .menu__list {
     display: flex;
 }
 .menu__list-item + .menu__list-item{
     margin-left: 2.5rem;
+}
+.menu__list-item--baza{
+    position: relative;
+}
+.menu__list-item--baza::before{
+    position: absolute;
+    content: '';
+    width: 5rem;
+    height: 5rem;
+    background: url('../images/home/baza.png') no-repeat;
+    left: -25px;
 }
 .menu__list-link {
     padding-bottom: 1rem;
@@ -49,11 +76,20 @@
     background: url('../images/home/home-bg.jpg') no-repeat center;
     background-size: cover;
     min-height: calc(100vh - 9.5rem);
-
+    transform: translateY(-10rem);
+}
+.home-heading::after{
+    position: absolute;
+    content: '';
+    width: 90rem;
+    height: 15rem;
+    background: url('../images/home/logo-bg.png') no-repeat;
+    right: 0;
+    top: 60%;
 }
 
 .home-heading__title {
-    padding-top: 20rem;
+    padding-top: 30rem;
     margin-left: 9rem;
     max-width: 89rem;
     font-size: 6rem;
@@ -75,4 +111,218 @@
 .home-heading__scroll-btn {
     background-color: transparent;
     border: none;
+}
+
+
+//CATALOG
+.catalog__block {
+    display: flex;
+}
+.catalog__content-title {
+    margin-bottom: 5rem;
+    font-size: 4.8rem;   
+}
+.catalog__content-title span{
+    font-weight: 100;
+}
+.catalog__content-text {
+    margin-bottom: 3.5rem;
+}
+.catalog__content-text span{
+    font-weight: 700;
+}
+.catalog__img {
+    display: flex;
+    margin-left: 5rem;
+    transform: translateY(-22rem);
+}
+.catalog__img-item {
+    height: 63rem;
+    width: 30rem;
+    display: flex;
+    flex-direction: column;
+    background-size: cover;
+}
+.catalog__img-title{
+    margin-top: auto;
+    margin-left: 4rem;
+    font-size: 2.7rem;
+    font-weight: 700;
+    color: $white;
+    text-transform: uppercase;
+    transform: rotate(-90deg);
+    transform-origin: top left;
+}
+
+
+//INDUSTRIES
+.industries {
+    margin-top: -10rem;
+    background: #dce5f0;
+}
+.industries__title {
+    padding-top: 9rem;
+    max-width: 73rem;
+    font-size: 4.8rem;
+    font-weight: 100;
+}
+.industries__title span{
+    font-weight: 700;
+}
+.industries__block {
+    display: flex;
+    column-gap: 1rem;
+    transform: translateY(10rem);
+}
+.industries__block-item {
+    display: flex;
+    flex-direction: column;
+    max-width: 30rem;
+    width: 100%;
+    height: 44rem;
+    background-size: cover;
+}
+.industries__block-title {
+    margin-top: auto;
+    margin-left: 2rem;
+    color: $white;
+    text-transform: uppercase;
+    transform: rotate(-90deg);
+    transform-origin: top left;
+}
+
+//HOME-BLOG
+.blog-home {
+    padding-top: 21.5rem;
+    padding-bottom: 11.5rem;
+}
+.blog-home__block {
+    display: flex;
+    margin-bottom: 4.5rem;
+}
+.blog-home__inner {
+    display: flex;
+    align-items: center;
+}
+.blog-home__title {
+    font-size: 4.8rem;
+    font-weight: 100;
+}
+.blog-home__link {
+    display: block;
+    position: relative;
+    margin-left: 4rem;
+    margin-top: 1rem;
+    font-weight: 700;
+    color: $blue;
+}
+  
+.blog-home__link::after{
+    position: absolute;
+    content: '';
+    width: 4rem;
+    height: 4rem;
+    background: url('../images/home/arrows-blog.png') no-repeat;
+    top: 6px;
+    right: -45px;
+}
+.blog-home__arrows {
+    margin-left: auto;
+    width: 3rem;
+}
+.slick-prev,
+.slick-next{
+    padding: 0;
+    border: 0;
+    position: relative;
+}
+.slick-prev::before,
+.slick-next::after{
+    position: absolute;
+    content: '';
+    width: 5rem;
+    height: 5rem;   
+}
+.slick-prev::before{
+    left: -3rem;
+    background: url('../images/home/arrows-left-blog.png') no-repeat;
+}
+.slick-next::after{
+    background: url('../images/home/arrows-right-blog.png') no-repeat;
+}
+.slick-dots{
+    display: flex;
+    justify-content: center;
+    margin-top: 3rem;
+    column-gap: 1rem;
+}
+.slick-dots li button{
+    padding: 0;
+    font-size: 0;
+    border: none;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #bcc9d1;
+}
+li.slick-active button{
+    background-color: $blue;
+}
+.blog-home__wrapper {
+    max-width: 30rem;
+    width: 100%;
+    border: 1px solid#d4d4d4;
+}
+.blog-home__item-calendar {
+    position: relative;
+    padding: .7rem;
+    width: 17rem;
+    font-size: 1.6rem;
+    clip-path: polygon(0 0, 100% 0%, 87% 100%, 0 100%, 0% 50%);
+    color: $white;
+    transform: translateY(-2rem);
+    text-align: center;
+    font-weight: 100;
+    background-color: $blue;
+}
+.blog-home__item-calendar::before{
+    position: absolute;
+    content: '';
+    width: 5rem;
+    height: 5rem;
+    background: url('../images/home/calendar-blog.png') no-repeat;
+    left: 10px;
+}
+.blog-home__slider-block{
+    padding: 1rem;
+    padding-bottom: 2rem;
+    display: flex;
+    flex-direction: column;
+}
+.blog-home__item-title {
+    margin-bottom: 2.5rem;
+    color: $blue;
+    font-weight: 700;
+}
+.blog-home__item-text {
+    margin-bottom: 2rem;
+    color: $grey;
+}
+.blog-home__item-link {
+    display: block;
+    position: relative;
+    width: 15rem;
+    margin-left: auto;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: $blue;
+}
+.blog-home__item-link::after{
+    position: absolute;
+    content: '';
+    width: 5rem;
+    height: 8rem;
+    background: url('../images/home/arrows-item-blog.png') no-repeat;
+    right: -4rem;
+    top: 3px;
 }
