--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -30,3 +30,13 @@ button{
 	padding-left: 1.5rem;
 	padding-right: 1.5rem;
 }
+.title{
+	font-size: 4.8rem;
+	font-weight: 100;
+}
+.hide{
+	display: none;
+}
+.show{
+	display: block;
+}
