--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -8,5 +8,9 @@
 @import 'footer';
 @import 'about';
 @import 'services';
+@import 'baza';
+@import 'contacts';
+@import 'mobile-menu';
+@import 'media';
 
 
