--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -34,9 +34,11 @@ button{
 	font-size: 4.8rem;
 	font-weight: 100;
 }
-.hide{
+.hide,
+.hide-baza{
 	display: none;
 }
-.show{
+.show,
+.show-baza{
 	display: block;
 }
