--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -10,6 +10,8 @@
 @import 'services';
 @import 'baza';
 @import 'contacts';
+@import 'instalation';
+@import 'designers';
 @import 'mobile-menu';
 @import 'media';
 
