--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -12,6 +12,8 @@
 @import 'contacts';
 @import 'instalation';
 @import 'designers';
+@import 'production';
+@import 'technologies';
 @import 'mobile-menu';
 @import 'media';
 
